lab9/tests/valid/validProduct1.js
module.exports = {
    "category_id": "5",
    "title": "Apple watch series 7",
    "content": "apple",
    "price": "100",
    "old_price": "50",
    "status": "1",
    "keywords": "New keywords",
    "description": "New description",
    "hit": "0"
}