lab9/tests/invalid/wrongContent.js
module.exports = {
    "category_id": "10",
    "title": "watches",
    "content": 10,
    "price": "text",
    "old_price": "50",
    "status": "0",
    "keywords": "New keywords",
    "description": "New description",
    "hit": "0"
}